# blog

./: Cargo.toml  LICENSE  Trunk.toml  index.html
src/: main.rs
src/binding/: highlight.js  highlightjs.rs  mod.rs
src/components/: article.rs  article_content.rs  article_list_item.rs  article_list_pagination.rs  blog_content.rs  header.rs  mod.rs  sidebar.rs
src/components/bootstraps/: b_accordion.rs  b_btn.rs  b_card.rs  b_listgroup.rs  b_navbar.rs  mod.rs
src/pages/: article.rs  article_list.rs  blog.rs  blog_list.rs  mod.rs
static/css/: blog.css
tailwind/: tailwind.config.js
