[package]
name = "yew-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
gloo-utils = "0.1.1"
gloo-console = "0.2.1"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
reqwasm = "0.3.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"]}
